--- a/frontend/estilos.css
+++ b/frontend/estilos.css
@@ -2,8 +2,8 @@
    1. VARIÁVEIS GLOBAIS E RESET
    ========================================================================== */
 :root {
-    --cor-primaria: #2c3e50;    /* Azul escuro */
-    --cor-secundaria: #f39c12;   /* Laranja */
+    --cor-primaria: #011029;    /* Azul escuro */
+    --cor-secundaria: #fa9848;   /* Laranja */
     --cor-sucesso: #2ecc71;      /* Verde */
     --cor-erro: #e74c3c;        /* Vermelho */
     --cor-info: #3498db;        /* Azul claro */
