--- a/mobile/music-makers-android/app/src/main/res/values/colors.xml
+++ b/mobile/music-makers-android/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="cor_primaria">#2c3e50</color>
-    <color name="cor_secundaria">#f39c12</color>
+    <color name="cor_primaria">#011029</color>
+    <color name="cor_secundaria">#fa9848</color>
 
     <color name="purple_200">#0A214A</color>
     <color name="purple_500">#0A214A</color>
